--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/chickenscallopini.html">Chicken Scallopini</a>
     </body>
 </html>
