Edit chickenscallopini.html to contain a full recipe

--- a/recipes/chickenscallopini.html
+++ b/recipes/chickenscallopini.html
@@ -7,5 +7,33 @@
 
     <body>
         <h1>Chicken Scallopini</h1>
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/chicken-scallopini-horizontal-185-1548104684.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="A picture of chicken scallopini">
+        <h2>Description</h2>
+            <p>Most chicken scallopini recipes call for a lemon-caper sauce, which makes the dish almost indistinguishable from chicken piccata. So just what is <strong>chicken scallopini</strong>? It comes from the Italian word "<em>scaloppine</em>,” which translates to “small scallops” but has now taken on the meaning of a piece of thinly sliced meat. 
+               Chicken scallopini can be cooked in a variety of sauces and flavors. We departed from the piccata herd and went instead for tender mushrooms and a hint of wine, lemon, and broth, capped off with a dash of rich cream: <em>scaloppine ai funghi</em>. Cheers to a perfectly light yet hearty weeknight meal.</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>3 boneless skinless chicken breasts (about 1 1/4 lb.)</li>
+                <li>Kosher salt</li>
+                <li>1/3 c. all-purpose flour</li>
+                <li>2 tbsp. extra-virgin olive oil</li>
+                <li>4 tbsp. butter</li>
+                <li>8 oz. baby bella mushrooms, sliced</li>
+                <li>1/2 onion, finely chopped</li>
+                <li>2 cloves garlic, minced</li>
+                <li>1/4 c. white wine</li>
+                <li>1/4 c. low-sodium chicken broth</li>
+                <li>Juice of 1 lemon</li>
+                <li>1/4 c. heavy cream</li>
+                <li>Freshly chopped parsley, for garnish</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Place flour in a shallow bowl. Pat chicken dry and halve each breast horizontally to yield two thin pieces. Season each piece with salt and pepper, then then dip each in flour, shaking off any excess flour.</li>
+                <li>In a large skillet over medium-high heat, heat oil. Add chicken and cook until deeply golden, about 3 minutes per side. Remove from pan and set aside.</li>
+                <li>Reduce heat to medium. Add to skillet butter, onion, and mushroom and cook until golden, 8 minutes, stirring occasionally. Add in garlic and cook until fragrant, 1 minute more.</li>
+                <li>Stir in white wine, broth, and lemon juice, season with salt and pepper, then let simmer until slightly reduced and thickened, 3 minutes. Stir in cream.</li>
+                <li>Return chicken to skillet and spoon sauce over to coat. Garnish with parsley before serving.</li>
+            </ol>
     </body>
 </html>
