--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/chickenscallopini.html">Chicken Scallopini</a>
+        <a href="recipes/shrimppasta.html">Creamy Garlic Shrimp Pasta</a>
+        <a href="recipes/waffles.html">Belgian Waffles</a>
     </body>
 </html>
