Edit waffles.html to contain a full recipe

--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -7,5 +7,25 @@
 
     <body>
         <h1>Belgian Waffles</h1>
+        <img src="https://storcpdkenticomedia.blob.core.windows.net/media/recipemanagementsystem/media/recipe-media-files/recipes/retail/x17/2020_belgian-style-waffles_16700_600x600.jpg?ext=.jpg" alt="A picture of belgian waffles">
+        <h2>Description</h2>
+            <p>Toasty waffles are a welcome <strong>morning treat</strong>. Freeze any leftovers to <em>re-heat</em> for a quick weekday breakfast.</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>2 1/4 cups all-purpose flour</li>
+                <li>1/2 cup sugar</li>
+                <li>1 tablespoon baking powder</li>
+                <li>3/4 teaspoon salt</li>
+                <li>1 1/2 cups milk</li>
+                <li>1 cup butter, <em>melted</em></li>
+                <li>3 eggs, <em>slightly beaten</em></li>
+                <li>1 tablespoon vanilla extract</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Combine flour, sugar, baking powder and salt in bowl; mix well.</li>
+                <li>Combine milk, melted butter, eggs and vanilla in another bowl; mix well. Stir wet ingredients into dry ingredients.</li>
+                <li>Cook batter in Belgian waffle maker according to manufacturer’s directions. Serve warm with Butter with Canola Oil and maple syrup.</li>
+            </ol>
     </body>
 </html>
