--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/chickenscallopini.html">Chicken Scallopini</a>
-        <a href="recipes/shrimppasta.html">Creamy Garlic Shrimp Pasta</a>
-        <a href="recipes/waffles.html">Belgian Waffles</a>
+        <ul>
+            <li><a href="recipes/chickenscallopini.html">Chicken Scallopini</a></li>
+            <li><a href="recipes/shrimppasta.html">Creamy Garlic Shrimp Pasta</a></li>
+            <li><a href="recipes/waffles.html">Belgian Waffles</a></li>
+        </ul>
     </body>
 </html>
