Edit all html files

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="home heading">Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/chickenscallopini.html">Chicken Scallopini</a></li>
-            <li><a href="recipes/shrimppasta.html">Creamy Garlic Shrimp Pasta</a></li>
-            <li><a href="recipes/waffles.html">Belgian Waffles</a></li>
+            <div class="recipes">
+                <li><a href="recipes/chickenscallopini.html">Chicken Scallopini</a></li>
+                <li><a href="recipes/shrimppasta.html">Creamy Garlic Shrimp Pasta</a></li>
+                <li><a href="recipes/waffles.html">Belgian Waffles</a></li>
+            </div>
         </ul>
     </body>
 </html>
